--- a/app/views/layouts/rails_admin/_head.html.erb
+++ b/app/views/layouts/rails_admin/_head.html.erb
@@ -5,8 +5,8 @@
 <meta content="false" name="turbo-prefetch">
 <%= csrf_meta_tag %>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script src="https://s3.us-east-1.amazonaws.com/assets.activityhero.com/buttons/bootstrap.min.js"></script>
-<link href="https://s3.us-east-1.amazonaws.com/assets.activityhero.com/buttons/bootstrap.min.css" rel="stylesheet">
+<script src="https://s3.us-east-1.amazonaws.com/assets.activityhero.com/buttons/bootstrap5.min.js"></script>
+<link href="https://s3.us-east-1.amazonaws.com/assets.activityhero.com/buttons/bootstrap5.min.css" rel="stylesheet">
 <% case RailsAdmin::config.asset_source
    when :webpacker %>
   <%= stylesheet_pack_tag "rails_admin", data: {'turbo-track': 'reload'} %>
